--- a/style.css
+++ b/style.css
@@ -3,3 +3,39 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header > h1, nav {
+  text-align: center;
+}
+
+header > nav > a {
+  text-align: center;
+  padding: 0 1rem;
+  background: grey;
+}
+
+#featured-property {
+  width: 900px;
+  margin: .5rem auto;
+}
+
+#featured-property > figure > img {
+  width: 800px;
+}
+
+#featured-property > figure > figcaption {
+  font-size: 12px;
+  text-align: center;
+}
+
+#featured-property > p {
+  text-align: center;
+  font-size: 14px;
+}
+
+#details > div {
+  float: left;
+  width: 25%;
+  text-align: center;
+  background: red;
+}
